networking/ingress/shared-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: shared-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*.company.com"
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: TERMINATE
      credentialName: platform-wildcard-cert
    hosts:
    - "*.company.com"
